Update ELF Reader

--- a/Mapping ELF/makefile
+++ b/Mapping ELF/makefile
@@ -1,14 +1,17 @@
-all: examine
+all: readelf
 
-examine: ../library/linked_list.o mapping.o
-	gcc -m32 -g -Wall ../library/linked_list.o mapping.o -o examine
-	bash test
+readelf: ../library/linked_list.o ELFreader.o
+	gcc -m32 -g -Wall -o $@ ../library/linked_list.o ELFreader.o
+#	bash test
+
+ELFreader.o: ELFreader.h ELFreader.c
+	gcc -m32 -g -ansi -Wall -c ELFreader.c -o $@
 
 mapping.o:
-	gcc -m32 -g -ansi -Wall -c mapping.c -o mapping.o
+	gcc -m32 -g -ansi -Wall -c $< -o $@
 
 ../library/linked_list.o:
 	gcc -m32 -g -ansi -Wall -c ../library/linked_list.c -o ../library/linked_list.o
 
 clean:
-	\rm ../library/*.o *.o *~ examine
+	\rm ../library/*.o *.o *~ readelf
